feat(2024): add solution for day 3

--- a/2024/package.json
+++ b/2024/package.json
@@ -9,7 +9,8 @@
     "lint:prettier": "prettier --check .",
     "lint:ts": "tsc --noEmit",
     "run:1": "tsx src/1/part-two.ts",
-    "run:2": "tsx src/2/part-two.ts"
+    "run:2": "tsx src/2/part-two.ts",
+    "run:3": "tsx src/3/part-two.ts"
   },
   "author": "Sondre Søberg",
   "license": "MIT",
