--- a/2024/package.json
+++ b/2024/package.json
@@ -14,7 +14,8 @@
     "run:4": "tsx src/4/part-two.ts",
     "run:5": "tsx src/5/part-two.ts",
     "run:6": "tsx src/6/part-two.ts",
-    "run:7": "tsx src/7/part-two.ts"
+    "run:7": "tsx src/7/part-two.ts",
+    "run:8": "tsx src/8/part-two.ts"
   },
   "author": "Sondre Søberg",
   "license": "MIT",
