--- a/2024/package.json
+++ b/2024/package.json
@@ -20,7 +20,8 @@
     "run:10": "tsx src/10/part-two.ts",
     "run:11": "tsx src/11/part-two.ts",
     "run:12": "tsx src/12/part-two.ts",
-    "run:13": "tsx src/13/part-two.ts"
+    "run:13": "tsx src/13/part-two.ts",
+    "run:16": "tsx src/16/part-two.ts"
   },
   "author": "Sondre Søberg",
   "license": "MIT",
