--- a/2025/package.json
+++ b/2025/package.json
@@ -8,7 +8,7 @@
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
     "lint:ts": "tsc --noEmit",
-    "run:1": "tsx src/1/2.ts"
+    "run": "tsx src/2/2.ts"
   },
   "author": "Sondre Søberg",
   "license": "MIT",
