--- a/2025/package.json
+++ b/2025/package.json
@@ -8,7 +8,7 @@
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
     "lint:ts": "tsc --noEmit",
-    "run": "tsx src/9/2.ts"
+    "run": "tsx src/10/2.ts"
   },
   "author": "Sondre Søberg",
   "license": "MIT",
@@ -22,5 +22,8 @@
     "prettier": "^3.7.3",
     "tsx": "^4.21.0",
     "typescript-eslint": "^8.48.0"
+  },
+  "dependencies": {
+    "z3-solver": "^4.15.4"
   }
 }
