--- a/2025/package.json
+++ b/2025/package.json
@@ -8,7 +8,7 @@
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
     "lint:ts": "tsc --noEmit",
-    "run": "tsx src/10/2.ts"
+    "run": "tsx src/11/2.ts"
   },
   "author": "Sondre Søberg",
   "license": "MIT",
@@ -24,6 +24,8 @@
     "typescript-eslint": "^8.48.0"
   },
   "dependencies": {
+    "many-keys-map": "^3.0.3",
+    "memoize": "^10.2.0",
     "z3-solver": "^4.15.4"
   }
 }
